FIX: resolve 100vh bug on mobile Safari
* mobile Safari browsers overlap the viewport height and can add scrolling to an element that's supposed to be 100vh; added fallback for Apple and Mozilla devices to fill the available space instead of 100vh

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,8 @@
 
 .max-vh-100 {
     max-height: 100vh !important;
+    max-height: -moz-available !important;
+    max-height: -webkit-fill-available !important;
 }
 
 .image-fluid {
